<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/ic_app_logo"
        android:contentDescription="@string/Logo_img" />

    <androidx.core.widget.ContentLoadingProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:gravity="center"
        android:text="@string/PoweredBy"
        android:textColor="#000"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_logo"
        android:contentDescription="@string/Gtech_img" />

</LinearLayout>