<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appWhite"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageNotify"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/Notification_Image_desc"
        android:background="@drawable/ic_app_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:text="@string/Notification_title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notification_body"
        android:ellipsize="marquee"
        android:textColor="#000000"
        android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>