<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Notification_AlertDialog"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/appWhite"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
            android:id="@+id/NotificationAlertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Notification_title"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <TextView
                android:id="@+id/NotificationAlertBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/demotext"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:background="@color/colorPrimary"
                android:text="@string/Okbtn"
                android:textColor="@color/appWhite"
                android:textSize="18sp"
                style="?android:attr/borderlessButtonStyle"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>